--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -1,5 +1,5 @@
 % +--------------------------------------------------+
-% | Typeset this file to document the OU_SUPPS       |
+% | Typeset this file to document the OU-SUPPS       |
 % +--------------------------------------------------+
 %
 % Copyright (c) 2015-2017 by Robert Brignall for The Open University.
@@ -1114,6 +1114,94 @@ The optional final parameter |[<voffset>]| allows you to move the entire margin 
 \end{desc}
 Some deprecated equivalent commands that produce the same effect as |\mk[<description>]{<n>}|. The |\mark| command currently redefines a \TeX\ primitive and will be removed in a future release.
 
+
+\begin{desc}
+|\subtotal[<description>]{<n>}[<voffset>]|\\
+|\total[<description>]{<n>}[<voffset>]|
+\end{desc}
+
+Specifies that the subtotal or total for a part-question or question is |<n>|, placing |<n>| in the margin, and the word `Subtotal' or `Total' in large, bold to its right. The optional argument |<description>| can be used to append wording to the word `Total'. Typical usages of the |<description>| parameter are:\\ 
+|\subtotal[for part \theenumi]{<n>]}|\\
+|\total[for Question \thequestion]{<n>]}|.
+
+See under the description of |\mk| above for information on usage of the optional parameter |[<voffset>]|.
+
+\begin{desc}
+|\subtotal*[<description>]|\\
+|\total*[<description>]|
+\end{desc}
+
+Calculates the subtotal or total for a part-question or question, placing 
+the calculated value in the margin, and the word `Subtotal' or `Total' in large, 
+bold to its right; the calculated value accounts for all marks given in 
+any of the following commands, but only \emph{within} a |solution| environment: |bracketedmarks|, |solnmarks|, |solnmarksplus|, 
+|marks|, |mk|, and |mkplus|. The optional argument |<description>| is the same 
+as with the |\subtotal| and |\total| commands. 
+
+\subsubsection{Rules}
+
+Primarily aimed at the creation of exam solutions (though they will work in any file using |ouexam.cls|), the available commands for rules are the same as for |outn|.
+
+\begin{desc}
+|\setSubtotalHline[<options>]|
+\end{desc}
+
+Sets options (including turning off) for horizontal lines after |\subtotal| and
+|\subtotal*| command. Supported options, in any order, are:
+\begin{itemize}
+  \item |moveleft=<length>|, default is |.1\textwidth|: specifies the horizontal offset of the line;
+  \item |width=<length>|, default is |1.5\textwidth|: specifies the horizontal width of the line;
+  \item |height=<length>|, default is |2pt|: specifies the height of the line;
+  \item |color=<color>|, default is |black|: specifies the colour of the line;
+  \item |draw line=<true/false>|, default is |true|: specifies if the line is to be drawn or not.
+\end{itemize}
+
+Simply calling |\setSubtotalHline| without options, resets all of the options
+to their default values.
+
+Sample uses include, for example:
+
+|\setSubtotalHline[moveleft=0pt]|
+
+|\setSubtotalHline[moveleft=0pt,height=5pt,color=orange]|
+
+This command is just a short cut to the |\pgfkeys| command, and 
+users familiar with the syntax of |\pgfkeys| might prefer to use, 
+for example:
+
+|\pgfkeys{/subtotalhline,default,moveleft=-3cm,color=red!40!white}|
+
+\begin{desc}
+|\setTotalHline[<options>]|
+\end{desc}
+This is analogous to the |\setSubtotalHline| command, and customises the lines
+drawn (if any) after the |\total| and |\total*| commands. It takes exactly 
+the same options as |\setSubtotalHline|, and each option performs the analogous
+task; the default |height| for the |subtotal| horizontal lines is |1pt|, 
+but all other defaults are the same as those for the  |total| horizontal lines.
+
+Users who prefer to use |\pgfkeys| directly may use, for example,
+
+|\pgfkeys{/totalhline,default,moveleft=-3cm,color=red!40!white}|
+
+\begin{desc}
+|\ourule[<options>]|
+\end{desc}
+This command enables users to draw a horizontal rule manually at some point in their tutor notes, 
+not using any of the |\subtotal| and friends commands. It takes exactly the 
+same options as |\setSubtotalHline|, and each option performs the analogous
+task. The default 
+values are copied from the default values of the |\setTotalHline|.
+
+\begin{desc}
+|\setOUrule[<options>]|
+\end{desc}
+Users may specify global options for their |\ourule| command in exactly the same 
+way as in |\setSubtotalHline| and |\setTotalHline|.
+
+Users who prefer to use |\pgfkeys| directly may use, for example,
+
+|\pgfkeys{/ourule,default,moveleft=-3cm,color=red!40!white}|
 
 \subsection{Alternative method to create solutions}
 If you prefer not to have solutions appearing in-line with the questions, an alternative method is to place all solutions at the end. You should not use this method for creating specimen solutions.
