--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -1,4 +1,4 @@
-\documentclass[showsolutions]{ouexam} 
+\documentclass{ouexam} 
 % Main available options:
 %  specimen			For specimen exam papers
 %  secondspecimen	For 2nd specimen exam
