Changed 'estore in' to 'store in' in the metadataset commands; this allows more flexible specifications of the instructions key in ouexam.cls, ouab.cls and ouicma.cls.
There were a few metadataset keys missing from ouicma.cls which
have been accounted for and documented.

--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -1527,16 +1527,15 @@ for the |metadataset| command in each of the |OU|-based class files.
 	|module title|                & \metakeyavailable & \metakeyavailable & \metakeyavailable & \metakeyavailable \\
 	|multiple choice option text| & \metakeyavailable & \metakeyavailable & \metakeyavailable & \metakeyavailable \\
 	|ou logo file base| & \metakeyavailable & \metakeyavailable & \metakeyavailable & \metakeyavailable \\
+	|copyright year|             & \metakeyavailable & \metakeyavailable & \metakeyavailable  & \metakeyavailable \\
 	\cmidrule{2-5}
 	|document title|              & \metakeyavailable &                   & \metakeyavailable & \metakeyavailable \\
 	|presentation|                & \metakeyavailable &                   & \metakeyavailable & \metakeyavailable \\
-	|copyright year|             & \metakeyavailable & \metakeyavailable &                   & \metakeyavailable \\
 	|supp no|                     & \metakeyavailable & \metakeyavailable & \metakeyavailable &                   \\
 	|instructions|                & \metakeyavailable & \metakeyavailable & \metakeyavailable &                   \\
+	|version no|                  & \metakeyavailable & \metakeyavailable & \metakeyavailable &                   \\
 	\cmidrule{2-5}
-	|version no|                  & \metakeyavailable & \metakeyavailable &                   &                   \\
-	\cmidrule{2-5}
-	|document subtitle|           & \metakeyavailable &                   &                   &                   \\
+	|document subtitle|           & \metakeyavailable &                   & \metakeyavailable &                   \\
 	|no cut off date|             & \metakeyavailable &                   &                   &                   \\
 	%\cmidrule{2-5}
 	|session|                     &                   & \metakeyavailable &                   &                   \\
