--- a/ouexam.cls
+++ b/ouexam.cls
@@ -190,24 +190,24 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \pgfkeys{
  /meta data/.is family, /meta data,
-   module code/.estore in =\@modulecode,
-   session/.estore in =\@session,
-   module title/.estore in=\@moduletitle,
-   specimen solutions title/.estore in=\@specimensolutionstitle,
+   module code/.store in =\@modulecode,
+   session/.store in =\@session,
+   module title/.store in=\@moduletitle,
+   specimen solutions title/.store in=\@specimensolutionstitle,
    exam code/.code=\examcode{#1},
-   exam time/.estore in =\@examtime,
-   exam day/.estore in=\@examday,
-   exam month/.estore in=\@exammonth,
-   exam year/.estore in=\@examyear,
-   time allowed/.estore in=\@timeallowed,
-   copyright year/.estore in=\@copyrightyear,
-   supp no/.estore in=\@suppno,
-   version no/.estore in=\@versionno,
-   faculty/.estore in=\@faculty,
-   multiple choice option text/.estore in=\@optiontext,
-   instructions/.estore in=\@examinstructions,
+   exam time/.store in =\@examtime,
+   exam day/.store in=\@examday,
+   exam month/.store in=\@exammonth,
+   exam year/.store in=\@examyear,
+   time allowed/.store in=\@timeallowed,
+   copyright year/.store in=\@copyrightyear,
+   supp no/.store in=\@suppno,
+   version no/.store in=\@versionno,
+   faculty/.store in=\@faculty,
+   multiple choice option text/.store in=\@optiontext,
+   instructions/.store in=\@examinstructions,
    top padding/.code=\setlength\toppadding{#1}, 
-   ou logo file base/.estore in=\@oulogofilebase,
+   ou logo file base/.store in=\@oulogofilebase,
 }
 \newcommand{\metadataset}[1]{%
     \pgfkeys{/meta data,#1}%
