--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -47,7 +47,7 @@
 suggestions go to \href{https://github.com/rbrignall/OU-SUPPS}%
 {\texttt{https://github.com/rbrignall/OU-SUPPS}}.}}
 
-\date{Version 1.42\\2016-11-15}
+\date{Version 1.43\\2020-03-31}
 
 \IfFileExists{enumitem.sty}{\usepackage{enumitem}}{}
 
@@ -887,6 +887,8 @@ Sets the code of the module (required).
 |\session{...}|
 \end{desc}
 Sets the session code for the exam (required, except for |specimen| and |secondspecimen|). This replaces the deprecated |\conflation{...}| command (although this still works to ensure backwards compatibility).
+
+If |specimen| or |secondspecimen| options are used, |\session{...}| can be used to overwrite the text `Specimen' or `Second Specimen' as appears in the title and footer. For example, you could specify |\session{Third specimen}|.
 
 \begin{desc}
 |\moduletitle{...}|
