--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -774,6 +774,12 @@ The |\tutororstudent| command takes two arguments; the first argument will only
 be output when the |specsolns| is \emph{not} active, and the second argument 
 will only be output when the |specsolns| \emph{is} active.
 
+\begin{desc}
+|\tutoronlycolor{<color>}|\\
+|\studentonlycolor{<color>}|
+\end{desc}
+These commands set the color of the text in tutor- and student-specific comments and environments. The default is |black| for |\tutoronlycolor|, and the same as |\specsolnscolor| for |\studentonlycolor| (by default, this is |ougreen|).
+
 \subsection{Technical info}
 This section can be omitted unless you need/want to know a bit more about the class file.
 
