--- a/outn.cls
+++ b/outn.cls
@@ -75,6 +75,9 @@
 \def\@oulogofilebase{OU_Master_Logo_Black_CMYK_29mm}
 \newcommand\oulogofilebase[1]{\renewcommand\@oulogofilebase{#1}}
 %
+\newif\if@switchmarks
+\@switchmarksfalse
+\newcommand\switchmarks{\@switchmarkstrue}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Meta data can be set using \metadataset command, based on pgfkeys
@@ -410,7 +413,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Marks and remarks
 %
-\if@specsolns
+\if@specsolns%
   	% suppress everything in specimen solutions
   	\newcommand{\bracketedmarks}[2][]{\relax}
   	\newcommand{\solnmarks}[2][]{\relax}
@@ -419,12 +422,24 @@
   	\newenvironment{longremark}{\comment}{\endcomment}
 \else%
 	% Not specimen solutions
-  	\newcommand{\bracketedmarks}[2][\unskip]{%
-		\@update@totals{#2}\marginnote{\hfill \makebox[1cm][r]{[\textsl{#2}]}\makebox[4cm][r]{\parbox[t]{3.75cm}{\small\raggedright #1}}}%
+	\newcommand{\bracketedmarks}[2][\unskip]{%
+		\@update@totals{#2}\marginnote{\hfill %
+			\if@switchmarks%
+				\makebox[4cm][r]{\parbox[t]{3.75cm}{\small\raggedright #1}}\makebox[1cm][r]{[\textsl{#2}]}%
+			\else%
+				\makebox[1cm][r]{[\textsl{#2}]}\makebox[4cm][r]{\parbox[t]{3.75cm}{\small\raggedright #1}}%
+			\fi%		
+		}%
 	}
-  	\newcommand{\solnmarks}[2][\unskip]{%
-		\@update@totals{#2}\marginnote{\hfill\small\sf \makebox[1cm][r]{\sf #2}\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright #1}}}%
-	}
+	\newcommand{\solnmarks}[2][\unskip]{%
+		\@update@totals{#2}\marginnote{\hfill\small\sf %
+			\if@switchmarks%
+				\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright #1}}\makebox[1cm][r]{#2}%
+			\else%
+				\makebox[1cm][r]{#2}\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright #1}}%
+			\fi%
+		}%
+	}	
   	\newcommand{\solnmarksplus}[2]{\solnmarks[#2]{#1}}
   	\newcommand{\remark}[1]{\emph{Remark:} #1}
   	\newenvironment{longremark}{\emph{Remarks:}\par}{}
@@ -463,13 +478,49 @@
   		\fi%
 	}
     % \total*
-    \newcommand{\@total}[1][\unskip]{\marginnote{\sf\bfseries \makebox[1cm][r]{\thetotal}\ Total\ #1}\nopagebreak\outn@draw@total@rule}
+    \newcommand{\@total}[1][\unskip]{%
+    	\marginnote{\sf\bfseries %
+			\if@switchmarks%
+				\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright Total\ #1}}\makebox[1cm][r]{\thetotal}%
+     		\else%
+				\makebox[1cm][r]{\thetotal}\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright Total\ #1}}%
+			\fi%
+		}%
+		\nopagebreak\outn@draw@total@rule%
+	}%
     % \total[]{}
-    \newcommand{\@@total}[2][\unskip]{\marginnote{\sf\bfseries \makebox[1cm][r]{#2}\ Total\ #1}\nopagebreak\outn@draw@total@rule}
+    \newcommand{\@@total}[2][\unskip]{%
+    	\marginnote{\sf\bfseries %
+			\if@switchmarks%
+				\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright Total\ #1}}\makebox[1cm][r]{#2}%
+     		\else%
+				\makebox[1cm][r]{#2}\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright Total\ #1}}%
+			\fi%
+		}%
+		\nopagebreak\outn@draw@total@rule%
+	}
     % \subtotal*
-    \newcommand{\@subtotal}[1][\unskip]{\marginnote{\small\sf\bfseries \makebox[1cm][r]{\thesubtotal}\ Subtotal\ #1 }\nopagebreak\setcounter{subtotal}{0}\outn@draw@subtotal@rule}
+    \newcommand{\@subtotal}[1][\unskip]{%
+    	\marginnote{\small\sf\bfseries %
+			\if@switchmarks%
+				\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright Subtotal\ #1}}\makebox[1cm][r]{\thesubtotal}%
+     		\else%
+				\makebox[1cm][r]{\thesubtotal}\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright Subtotal\ #1}}%
+			\fi%
+		}%
+		\nopagebreak\setcounter{subtotal}{0}\outn@draw@subtotal@rule%
+	}
     % \subtotal[]{}
-    \newcommand{\@@subtotal}[2][\unskip]{\marginnote{\small\sf\bfseries \makebox[1cm][r]{#2}\ Subtotal\ #1}\nopagebreak\setcounter{subtotal}{0}\outn@draw@subtotal@rule}
+    \newcommand{\@@subtotal}[2][\unskip]{%
+    	\marginnote{\small\sf\bfseries %
+			\if@switchmarks%
+				\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright Subtotal\ #1}}\makebox[1cm][r]{#2}%
+     		\else%
+				\makebox[1cm][r]{#2}\makebox[4cm][r]{\parbox[t]{3.75cm}{\raggedright Subtotal\ #1}}%
+			\fi%
+		}%
+		\nopagebreak\setcounter{subtotal}{0}\outn@draw@subtotal@rule%
+	}
 \fi
 
 % total horizontal rule
